fix : 자바 버전 핸들링 - 17 이전 버전을 위해 기존 var 사용을 명시적인 타입 선언으로 변경